force-app/main/default/objects/Termination_Approval_Worksheet__c/Termination_Approval_Worksheet__c.object-meta.xml
<CustomObject>
    <description>Used to calculate the costs of a lease termination.</description>
    <label>Termination Approval Worksheet</label>
    <nameField>
        <label>Termination Approval Worksheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Termination Approval Worksheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>