force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Approved_by_T_Mobile_Leasing_Team__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_T_Mobile_Leasing_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box if this is approved.</inlineHelpText>
    <label>Approved by T-Mobile Leasing Team</label>
    <type>Checkbox</type>
</CustomField>