force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Avg_Rent_Day__c.field-meta.xml
<CustomField>
    <fullName>Avg_Rent_Day__c</fullName>
    <formula>( Current_Rent__c  * 12) / 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Rent/Day (30 days/mo)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>