force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Current_Rent__c.field-meta.xml
<CustomField>
    <fullName>Current_Rent__c</fullName>
    <label>Current Rent</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>