force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Current_Term_Years__c.field-meta.xml
<CustomField>
    <fullName>Current_Term_Years__c</fullName>
    <inlineHelpText>Enter the number of years in the current Term</inlineHelpText>
    <label>Current Term Years</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>