force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/DX_Complete_Forecast__c.field-meta.xml
<CustomField>
    <fullName>DX_Complete_Forecast__c</fullName>
    <formula>Lease_Negotiation__r.DX_Complete_Forecast__c</formula>
    <label>DX Complete Forecast</label>
    <type>Date</type>
</CustomField>