force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Early_Termination_Fee__c.field-meta.xml
<CustomField>
    <fullName>Early_Termination_Fee__c</fullName>
    <label>Early Termination Fee</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>