force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Est_Restoration_Cost__c.field-meta.xml
<CustomField>
    <fullName>Est_Restoration_Cost__c</fullName>
    <inlineHelpText>Enter amount</inlineHelpText>
    <label>Est. Restoration Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>