force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Est_Restoration_Cost_LTA__c.field-meta.xml
<CustomField>
    <fullName>Est_Restoration_Cost_LTA__c</fullName>
    <label>Est. Restoration Cost LTA</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>