force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Est_Restoration_Cost_TN__c.field-meta.xml
<CustomField>
    <fullName>Est_Restoration_Cost_TN__c</fullName>
    <label>Est. Restoration Cost TN</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>