force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Final_Lease_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Lease_End_Date__c</fullName>
    <formula>Lease_Negotiation__r.Lease_Abstract__r.Lease_Term_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Lease End Date</label>
    <type>Date</type>
</CustomField>