force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Hold_Over_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Hold_Over_End_Date__c</fullName>
    <formula>Lease_Negotiation__r.Lease_Abstract__r.Hold_Over_End_Date__c</formula>
    <label>Hold Over End Date</label>
    <type>Date</type>
</CustomField>