force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Holdover_Clause__c.field-meta.xml
<CustomField>
    <fullName>Holdover_Clause__c</fullName>
    <formula>Lease_Negotiation__r.Lease_Abstract__r.Holdover_Clause__c</formula>
    <label>Holdover Clause</label>
    <type>Text</type>
</CustomField>