force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Holdover_Language_in_Lease__c.field-meta.xml
<CustomField>
    <fullName>Holdover_Language_in_Lease__c</fullName>
    <formula>Lease_Negotiation__r.Lease_Abstract__r.Holdover_Language_in_Lease__c</formula>
    <label>Holdover Language in Lease?</label>
    <type>Text</type>
</CustomField>