force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/HOLDOVER_Rate__c.field-meta.xml
<CustomField>
    <fullName>HOLDOVER_Rate__c</fullName>
    <formula>Lease_Negotiation__r.Lease_Abstract__r.HOLDOVER_Rate__c</formula>
    <label>HOLDOVER Rate %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>