force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/HOLDOVER_rent_increase__c.field-meta.xml
<CustomField>
    <fullName>HOLDOVER_rent_increase__c</fullName>
    <formula>Lease_Negotiation__r.Lease_Abstract__r.HOLDOVER_rent_increase__c</formula>
    <label>HOLDOVER (rent increase)</label>
    <precision>18</precision>
    <scale>18</scale>
    <type>Currency</type>
</CustomField>