force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Lease_ID__c.field-meta.xml
<CustomField>
    <fullName>Lease_ID__c</fullName>
    <formula>Lease_Negotiation__r.Lease_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease ID</label>
    <type>Text</type>
</CustomField>