force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Lease_is_in_holdover__c.field-meta.xml
<CustomField>
    <fullName>Lease_is_in_holdover__c</fullName>
    <formula>Lease_Negotiation__r.Lease_Abstract__r.Lease_is_in_holdover__c</formula>
    <label>Lease is in holdover</label>
    <type>Checkbox</type>
</CustomField>