force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Lease_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Lease_Negotiation__c</fullName>
    <label>Lease Negotiation</label>
    <referenceTo>Lease_Negotiation__c</referenceTo>
    <relationshipLabel>Termination Approval Worksheets</relationshipLabel>
    <relationshipName>Termination_Approval_Worksheets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>