force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Lease_Type__c.field-meta.xml
<CustomField>
    <fullName>Lease_Type__c</fullName>
    <label>Lease Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tower &amp; Ground</fullName>
            </value>
            <value>
                <fullName>Tower Only</fullName>
            </value>
            <value>
                <fullName>Ground Only</fullName>
            </value>
            <value>
                <fullName>Building</fullName>
            </value>
            <value>
                <fullName>Rooftop</fullName>
            </value>
            <value>
                <fullName>Other (specify below)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>