force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/LSP__c.field-meta.xml
<CustomField>
    <fullName>LSP__c</fullName>
    <description>Lum Sum Payment</description>
    <inlineHelpText>Lum Sum Payment</inlineHelpText>
    <label>LSP</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>