force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Months__c.field-meta.xml
<CustomField>
    <fullName>Months__c</fullName>
    <formula>(Current_Term_Expiration__c -Next_pay_date__c)/30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated as (Current Term Expiration - Next Pay Date)/30</inlineHelpText>
    <label>Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>