force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Months_of_Rent__c.field-meta.xml
<CustomField>
    <fullName>Months_of_Rent__c</fullName>
    <inlineHelpText>Enter approx. number of months btw. termination notice date and termination effective date.</inlineHelpText>
    <label>Months of Rent</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>