force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Months_Partial__c.field-meta.xml
<CustomField>
    <fullName>Months_Partial__c</fullName>
    <formula>Months__c  -  Months_Rounded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated as Months - Months Rounded</inlineHelpText>
    <label>Months Partial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>