force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Months_Rounded__c.field-meta.xml
<CustomField>
    <fullName>Months_Rounded__c</fullName>
    <formula>MFLOOR( Months__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated by rounding down the Months calculation</inlineHelpText>
    <label>Months Rounded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>