force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Next_pay_date__c.field-meta.xml
<CustomField>
    <fullName>Next_pay_date__c</fullName>
    <formula>CASE(MONTH(Date__c),
1, DATE(YEAR(Date__c), 2,1),
2, DATE(YEAR(Date__c), 3,1),
3, DATE(YEAR(Date__c), 4,1),
4, DATE(YEAR(Date__c), 5,1),
5, DATE(YEAR(Date__c), 6,1),
6, DATE(YEAR(Date__c), 7,1),
7, DATE(YEAR(Date__c), 8,1),
8, DATE(YEAR(Date__c), 9,1),
9, DATE(YEAR(Date__c), 10,1),
10, DATE(YEAR(Date__c), 11,1),
11, DATE(YEAR(Date__c), 12,1),
12, DATE(YEAR(Date__c)+1, 1,1),
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated as the first day of the month following the date entered</inlineHelpText>
    <label>Next pay date</label>
    <type>Date</type>
</CustomField>