force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/NNR_SOW_Other_Description__c.field-meta.xml
<CustomField>
    <fullName>NNR_SOW_Other_Description__c</fullName>
    <inlineHelpText>Populate when &quot;other&quot; is selected from the Statement of work above</inlineHelpText>
    <label>NNR SOW Other Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>