force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Notice_Comments__c.field-meta.xml
<CustomField>
    <fullName>Notice_Comments__c</fullName>
    <label>Notice Comments</label>
    <type>TextArea</type>
</CustomField>