force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Notice_Requirement_non_renewal__c.field-meta.xml
<CustomField>
    <fullName>Notice_Requirement_non_renewal__c</fullName>
    <inlineHelpText>Enter number of days</inlineHelpText>
    <label>Notice Requirement (non-renewal)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>