force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Ordinance__c.field-meta.xml
<CustomField>
    <fullName>Ordinance__c</fullName>
    <label>Ordinance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>