force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Other_Lease_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Lease_Type__c</fullName>
    <label>Other Lease Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>