force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Recommend_Courtesy_Notice__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Courtesy_Notice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommend Courtesy Notice</label>
    <type>Checkbox</type>
</CustomField>