force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Recommend_Lease_Termination_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Lease_Termination_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommend Lease Termination Agreement</label>
    <type>Checkbox</type>
</CustomField>