force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Recommend_NNR__c.field-meta.xml
<CustomField>
    <fullName>Recommend_NNR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommend NNR</label>
    <type>Checkbox</type>
</CustomField>