force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Recommended_TOO__c.field-meta.xml
<CustomField>
    <fullName>Recommended_TOO__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Send after DX to notify the LL that we have vacated the premises and are terminating occupancy.</inlineHelpText>
    <label>Recommended TOO</label>
    <type>Checkbox</type>
</CustomField>