force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Remaining_Rent_Payments__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Rent_Payments__c</fullName>
    <formula>Months_of_Rent__c  *  Current_Rent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>monthly rent * current rent</inlineHelpText>
    <label>Remaining Rent Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>