force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Remaining_Rent_Payments_LTA__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Rent_Payments_LTA__c</fullName>
    <label>Remaining Rent LTA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>