force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Restoration_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Restoration_Requirements__c</fullName>
    <label>Restoration Requirements</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>