force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Scenarios__c.field-meta.xml
<CustomField>
    <fullName>Scenarios__c</fullName>
    <defaultValue>&quot;Complete all three and mark your recommendation&quot;</defaultValue>
    <label>Scenarios</label>
    <length>255</length>
    <type>Text</type>
</CustomField>