force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Site_ID__c</fullName>
    <formula>Lease_Negotiation__r.Divestiture_Site__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site ID</label>
    <type>Text</type>
</CustomField>