force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/SOW_LTA__c.field-meta.xml
<CustomField>
    <fullName>SOW_LTA__c</fullName>
    <label>SOW LTA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Radio/Battery/LTE Cabinet Only</fullName>
                <label>1. Radios and HazMat</label>
            </value>
            <value>
                <fullName>2. Cabinets Only</fullName>
            </value>
            <value>
                <fullName>3. Antennas Only</fullName>
            </value>
            <value>
                <fullName>4. Cabinets and Antennas Only</fullName>
                <label>4. Cabinets and Antennas</label>
            </value>
            <value>
                <fullName>5. Full Deconstruction</fullName>
                <label>5. Full Deconstruction - Ground Only</label>
            </value>
            <value>
                <fullName>6. Full Deconstruction</fullName>
            </value>
            <value>
                <fullName>7. Other (Please describe below)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>