force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/SOW_NNR_Notes__c.field-meta.xml
<CustomField>
    <fullName>SOW_NNR_Notes__c</fullName>
    <label>SOW NNR Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>