force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/SOW_TN__c.field-meta.xml
<CustomField>
    <fullName>SOW_TN__c</fullName>
    <label>SOW TN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Radios and HazMat</fullName>
            </value>
            <value>
                <fullName>2. Cabinets Only</fullName>
            </value>
            <value>
                <fullName>3. Antennas Only</fullName>
            </value>
            <value>
                <fullName>4. Cabinet and Antennas</fullName>
            </value>
            <value>
                <fullName>5. Full Deconstruction – Ground Only</fullName>
            </value>
            <value>
                <fullName>6. Full Deconstruction</fullName>
            </value>
            <value>
                <fullName>7. Other (Please describe below)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>