force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Submitted_by__c.field-meta.xml
<CustomField>
    <fullName>Submitted_by__c</fullName>
    <formula>ENCODED:{!ID:Owner:User.FirstName}  &amp; &quot; &quot;  &amp;   {!ID:Owner:User.LastName}</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitted by</label>
    <type>Text</type>
</CustomField>