force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/TAW_SOW_Other_Description__c.field-meta.xml
<CustomField>
    <fullName>TAW_SOW_Other_Description__c</fullName>
    <inlineHelpText>Populate when &quot;other&quot; is selected from the Statement of work above</inlineHelpText>
    <label>TAW SOW Other Description</label>
    <length>64</length>
    <type>Text</type>
</CustomField>