force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Ter__c.field-meta.xml
<CustomField>
    <fullName>Ter__c</fullName>
    <label>Termination Type 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sole discretion</fullName>
            </value>
            <value>
                <fullName>Economic</fullName>
            </value>
            <value>
                <fullName>Technological</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>No term in lease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>