force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <inlineHelpText>Enter Current Term</inlineHelpText>
    <label>Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>