force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Term_Remaining_Days__c.field-meta.xml
<CustomField>
    <fullName>Term_Remaining_Days__c</fullName>
    <formula>Months_Partial__c * 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated as Partial Months X 30</inlineHelpText>
    <label>Term Remaining Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>