force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Term_Remaining_Months__c.field-meta.xml
<CustomField>
    <fullName>Term_Remaining_Months__c</fullName>
    <formula>Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the &quot;Months&quot; calculation.</inlineHelpText>
    <label>Term Remaining Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>