force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Term_Remaining_Rent__c.field-meta.xml
<CustomField>
    <fullName>Term_Remaining_Rent__c</fullName>
    <formula>( Current_Term_Expiration__c - Next_pay_date__c ) * Avg_Rent_Day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated as (Current Term Expiration - Next Pay Date) * Avg Rent Day</inlineHelpText>
    <label>Term Remaining Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>