force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Termination_Notes__c.field-meta.xml
<CustomField>
    <fullName>Termination_Notes__c</fullName>
    <label>Termination Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>