force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/TN_SOW_Other_Description__c.field-meta.xml
<CustomField>
    <fullName>TN_SOW_Other_Description__c</fullName>
    <label>TN SOW Other Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>