force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Total_Cost_of_Termination_LTA__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_of_Termination_LTA__c</fullName>
    <formula>Remaining_Rent_Payments_LTA__c + Est_Restoration_Cost_LTA__c  +  LSP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated as Est Restoration Cost + LSP</inlineHelpText>
    <label>Total Cost of Termination LTA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>