force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Total_Cost_of_Termination_NNR__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_of_Termination_NNR__c</fullName>
    <formula>Term_Remaining_Rent__c  +  Est_Restoration_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated as Term Remaining Rent + Est Restoration Cost</inlineHelpText>
    <label>Total Cost of Termination NNR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>