force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Total_Cost_of_Termination_TN__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_of_Termination_TN__c</fullName>
    <formula>Remaining_Rent_Payments__c  +  Early_Termination_Fee__c  +  Est_Restoration_Cost_TN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated as Remaining Rent Payments + Early Term Fee + Est Restoration Cost</inlineHelpText>
    <label>Total Cost of Termination TN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>