force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <label>Utility</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>