force-app/main/default/objects/Termination_Approval_Worksheet__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <formula>Lease_Negotiation__r.Vendor__c</formula>
    <label>Vendor</label>
    <type>Text</type>
</CustomField>