force-app/main/default/objects/Termination_Approval_Worksheet__c/validationRules/Termination_Approval_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Termination_Approval_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Months_of_Rent_LTA__c), NOT(ISBLANK(Remaining_Rent_Payments_LTA__c)))</errorConditionFormula>
    <errorDisplayField>Months_of_Rent_LTA__c</errorDisplayField>
    <errorMessage>Please update Months of rent before you add the value into Remaining Rents Payments</errorMessage>
</ValidationRule>